--- a/css/kehu.css
+++ b/css/kehu.css
@@ -129,12 +129,11 @@ img{
 	color: #333;
 }
 .center .bottom{
-	height: 358px;
+	overflow: hidden;
 	
 }
 .center .bottom .left{
 	width: 288px;
-	height: 358px;
 	padding: 0 7px;
 	float: left;
 }
@@ -155,7 +154,7 @@ img{
 }
 .center .bottom .left ul{
 	width: 100%;
-	height: 258px;
+
 }
 .center .bottom .left ul li a{
 	display: block;
@@ -183,8 +182,8 @@ img{
 }
 .center .bottom .right{
 	width: 851px;
-	height: 294px;
 	float: right;
+	padding: 0 20px;
 }
 .center .bottom .right .top{
 	width: 100%;
@@ -196,17 +195,32 @@ img{
 	text-align: left;
 	margin-bottom: 10px;
 }
-.center .bottom .right .neirong{
-	padding: 0 20px 20px;
+.center .bottom .right p{
 	font-size: 14px;
 	color: #333;
+}
+.center .bottom .right .neirong{
+	padding: 0 20px 20px;
 	border-bottom: 1px dotted #ddd;
 }
+.center .bottom .right .nrr{
+	margin-top: 10px;
+}
+.center .bottom .right .nr{
+	font-size: 14px;
+	font-weight: 700;
+	margin:30px 0;
+}
 .center .bottom .right .sj{
+	border-top: 1px dotted #ddd;
 	color: #333;
 	font-size: 13px;
 	text-align: right;
 	padding: 10px 20px;
+	margin-top: 10px;
+}
+.center .bottom .right img{
+	margin: 0 auto;
 }
 .center .bottom .right .goods .con .top_con{
 	width: 100%;
@@ -227,6 +241,7 @@ img{
 .bottom_ban{
 	height: 81px;
 	width: 100%;
+	margin-top: 20px;
 	background-color: #E6E6E6;
 }
 .bottom_ban .quyu{
