--- a/css/hangye.css
+++ b/css/hangye.css
@@ -83,6 +83,12 @@ img{
 	height: 467px;
 	margin: 0 auto;
 }
+.dis{
+	display: none;
+}
+.d-frist{
+	display: block;
+}
 .center .top{
 	width: 100%;
 	height: 15px;
@@ -125,8 +131,7 @@ img{
 	width: 100%;
 	height: 258px;
 }
-.center .bottom .left ul li a{
-	display: block;
+.center .bottom .left ul li .qie{
 	width: 100%;
 	height: 37px;
 	border: 1px solid #ddd;
