--- a/css/fashion.css
+++ b/css/fashion.css
@@ -115,7 +115,7 @@ a{
     margin: 0 5px;
 }
 .banner .ban_circular .banc_son:first-child{
-    margin-left: 640px;
+    margin-left: 49%;
 }
 .banner .ban_circular .banc_son:hover{
     background-color: #e1472f;
@@ -124,6 +124,7 @@ a{
     width: 100%;
     height: 36px;
     background-color: #333;
+    margin-bottom: 20px;
 }
 .dangqian .dangqian_center{
     width: 1030px;
@@ -158,52 +159,159 @@ a{
 }
 .content{
     width: 1030px;
-    height: 338px;
+    height: auto;
     margin: 0 auto;
+    overflow: hidden;
 }
-.content .con_neirong{
+.content .con_left{
+    width: 23.5%;
+    height: 308px;
+    float: left;
+}
+.content .con_left .conl_top{
     width: 100%;
-    height: 215px;
-    border: 1px solid #E0DDE0;
-    border-radius: 6px;
-    border-top: 0;
-    padding: 15px;
+    height: 97px;
+    margin-bottom: 20px;
+    background-color: #DF2640;
+}
+.content .con_left .conl_top .conlt_title,.content .con_left .conl_bottom .conlb_title{
+    width: 100%;
+    height: 42px;
+    border-bottom: 1px solid #ffffff;
+    font-size: 18px;
+    color: #ffffff;
+    font-family: "微软雅黑";
+    line-height: 43px;
+    text-align: center;
+}
+.content .con_left .conl_top a{
+    display: block;
+    width: 100%;
+    height: 54px;
+    font-size: 12px;
+    color: #ffffff;
+    line-height: 54px;
+    margin-left: 20px;
+    font-family: "微软雅黑";
+}
+.content .con_left .conl_bottom{
+    width: 100%;
+    height: 191px;
+    background-color: #DF2640;
+}
+.content .con_left .conl_bottom .conlb_content{
+    width: 100%;
+    height: 148px;
+    padding: 10px 15px;
     box-sizing: border-box;
 }
-.content .con_neirong .con_pic{
-    width: 400px;
-    height: 300px;
-    margin: 8px 15px 15px 0;
-    background-image: url("../img/guanyulogo.300");
-    background-size: 400px 300px;
-    background-repeat: no-repeat;
+.content .con_left .conl_bottom .conlb_content .conlbc_son{
+    width: 212px;
+    height: 32px;
+    line-height: 32px;
+    color: #ffffff;
+    font-size: 12px;
+    font-family: "微软雅黑";
+}
+.content .con_right{
+    width: 75%;
+    height: auto;
+    float: right;
+}
+.content .con_right .fashion_son{
+    width: 32.1%;
+    height: 311px;
+    border: 1px solid #E0DDE0;
+    background-color: #ffffff;
+    margin-right: 11px;
+    margin-bottom: 15px;
     float: left;
 }
-.content .con_neirong p{
-    width: auto;
-    height: 25px;
+.content .con_right .fashion_lastson{
+    margin-right: 0;
+}
+.content .con_right .fashion_son .fs_title{
+    width: 85%;
+    height:14px;
+    padding: 28px 15px 12px;
+    font-size: 13px;
+    font-family: "微软雅黑";
+    text-align: left;
+    color: #df263f;
+}
+.content .con_right .fashion_son img{
+    width: 100%;
+    /*height: 152px;*/
+}
+.content .con_right .fs_more{
+    width: 70px;
+    height: 24px;
+    border: 1px solid #999;
+    margin: 15px auto 0;
+    font-size: 12px;
+    text-align: center;
+    line-height: 24px;
+}
+.content .con_right .fs_more a{
+    display: block;
+    width: 70px;
+    height: 24px;
+    color: #999;
+    font-family: "微软雅黑";
+}
+.content .con_right .fs_more:hover{
+    border-color: #df263f;
+}
+.content .con_right .fs_more a:hover{
+    color: #df263f;
+}
+.content .con_right .conr_jilu{
+    width: 100%;
+    height: 17px;
+    margin: 10px 0;
+    float: left;
+    color: #333;
+    font-size: 12px;
+    font-family: "微软雅黑";
+    text-align: center;
+}
+.content .con_right .conr_page{
+    width: 100%;
+    height: 40px;
+    margin: 0 0 10px;
+    float: left;
+}
+.content .con_right .conr_page .conrp_son1{
+    width: 33px;
+    height: 31px;
+    background-color: #DF263F;
+    text-align: center;
+    float: left;
+    margin-left: 338px;
+}
+.content .con_right .conr_page .conrp_son1 a,.content .con_right .conr_page .conrp_son2 a,.content .con_right .conr_page .conrp_son3 a{
     font-size: 12px;
     color: #333;
+    font-family: "微软雅黑";
+    line-height: 31px;
+}
+.content .con_right .conr_page .conrp_son2{
+    width: 33px;
+    height: 31px;
+    border: 1px solid #DDDDDD;
+    border-left: 0;
+    box-sizing: border-box;
     float: left;
-    font-family: "微软雅黑";
-    margin-top: 5px;
-    margin-left: 40px;
+    text-align: center;
 }
-.content .con_neirong .wenben{
-    text-indent: 2em;
-    display: block;
-    float: right;
-    width: 578px;
-    height: auto;
-    line-height: 28px;
-    font-size: 13px;
-    color: #666;
-    font-family: "微软雅黑";
-}
-
-.content .xiabai{
-    width: 100%;
-    height: 123px;
+.content .con_right .conr_page .conrp_son3{
+    width: 43px;
+    height: 31px;
+    border: 1px solid #DDDDDD;
+    border-left: 0;
+    box-sizing: border-box;
+    float: left;
+    text-align: center;
 }
 .footers{
     width: 100%;
