--- a/css/lianxi.css
+++ b/css/lianxi.css
@@ -115,7 +115,7 @@ a{
     margin: 0 5px;
 }
 .banner .ban_circular .banc_son:first-child{
-    margin-left: 640px;
+    margin-left: 49%;
 }
 .banner .ban_circular .banc_son:hover{
     background-color: #e1472f;
@@ -124,6 +124,7 @@ a{
     width: 100%;
     height: 36px;
     background-color: #333;
+    margin-bottom: 20px;
 }
 .dangqian .dangqian_center{
     width: 1030px;
@@ -158,52 +159,135 @@ a{
 }
 .content{
     width: 1030px;
-    height: 338px;
+    height: auto;
     margin: 0 auto;
+    overflow: hidden;
 }
-.content .con_neirong{
+.content .con_left{
+    width: 23.5%;
+    height: 308px;
+    float: left;
+}
+.content .con_left .conl_top{
     width: 100%;
-    height: 215px;
-    border: 1px solid #E0DDE0;
-    border-radius: 6px;
-    border-top: 0;
-    padding: 15px;
+    height: 97px;
+    margin-bottom: 20px;
+    background-color: #DF2640;
+}
+.content .con_left .conl_top .conlt_title,.content .con_left .conl_bottom .conlb_title{
+    width: 100%;
+    height: 42px;
+    border-bottom: 1px solid #ffffff;
+    font-size: 18px;
+    color: #ffffff;
+    font-family: "微软雅黑";
+    line-height: 43px;
+    text-align: center;
+}
+.content .con_left .conl_top a{
+    display: block;
+    width: 100%;
+    height: 54px;
+    font-size: 12px;
+    color: #ffffff;
+    line-height: 54px;
+    margin-left: 20px;
+    font-family: "微软雅黑";
+}
+.content .con_left .conl_bottom{
+    width: 100%;
+    height: 191px;
+    background-color: #DF2640;
+}
+.content .con_left .conl_bottom .conlb_content{
+    width: 100%;
+    height: 148px;
+    padding: 10px 15px;
     box-sizing: border-box;
 }
-.content .con_neirong .con_pic{
-    width: 400px;
-    height: 300px;
-    margin: 8px 15px 15px 0;
-    background-image: url("../img/guanyulogo.300");
-    background-size: 400px 300px;
-    background-repeat: no-repeat;
-    float: left;
-}
-.content .con_neirong p{
-    width: auto;
-    height: 25px;
+.content .con_left .conl_bottom .conlb_content .conlbc_son{
+    width: 212px;
+    height: 32px;
+    line-height: 32px;
+    color: #ffffff;
     font-size: 12px;
-    color: #333;
-    float: left;
     font-family: "微软雅黑";
-    margin-top: 5px;
-    margin-left: 40px;
 }
-.content .con_neirong .wenben{
-    text-indent: 2em;
-    display: block;
+.content .con_right{
+    width: 75%;
+    height: 307px;
     float: right;
-    width: 578px;
+    padding: 30px 15px 5px;
+    border: 1px solid #ccc;
+    box-sizing: border-box;
+    margin-bottom: 15px;
+}
+.content .con_right .con_lianxiren{
+    width: 100%;
+    height: 40px;
+}
+.content .con_right .con_lianxiren .conl_left{
+    margin-left: 40px;
+    width: 80px;
     height: auto;
-    line-height: 28px;
-    font-size: 13px;
+    font-size: 12px;
     color: #666;
     font-family: "微软雅黑";
+    text-align: right;
+    float: left;
 }
-
-.content .xiabai{
+.content .con_right .con_lianxiren .conl_right{
+    float: left;
+    font-size: 12px;
+    color: #666;
+    font-family: "微软雅黑";
+    margin-left: 8px;
+    /*text-align: left;*/
+}
+.content .con_right .liuyan{
+    width: auto;
+    height: 32px;
+    margin-left: 130px;
+    margin-right: 5px;
+    background-color: #DF263F;
+    float: left;
+}
+.content .con_right .youjian{
+    margin-left: 0;
+}
+.content .con_right .liuyan a{
+    width: 48px;
+    height: 32px;
+    padding: 0 10px;
+    color: #ffffff;
+    font-size: 12px;
+    font-family: "微软雅黑";
+    line-height: 32px;
+}
+.content .con_right .san_zong{
     width: 100%;
-    height: 123px;
+    height: 32px;
+    margin-top: 55px;
+}
+.content .con_right .san_zong .daohang{
+    width: auto;
+    height: 32px;
+    margin-left: 130px;
+    margin-right: 5px;
+    background-color: #DF263F;
+    float: left;
+}
+.content .con_right .san_zong .ditu{
+    margin-left: 0;
+}
+.content .con_right .san_zong .daohang a{
+    width: 48px;
+    height: 32px;
+    padding: 0 10px;
+    color: #ffffff;
+    font-size: 12px;
+    font-family: "微软雅黑";
+    line-height: 32px;
 }
 .footers{
     width: 100%;
