--- a/css/xiangqing.css
+++ b/css/xiangqing.css
@@ -115,7 +115,7 @@ a{
     margin: 0 5px;
 }
 .banner .ban_circular .banc_son:first-child{
-    margin-left: 640px;
+    margin-left: 49%;
 }
 .banner .ban_circular .banc_son:hover{
     background-color: #e1472f;
@@ -124,6 +124,7 @@ a{
     width: 100%;
     height: 36px;
     background-color: #333;
+    margin-bottom: 20px;
 }
 .dangqian .dangqian_center{
     width: 1030px;
@@ -158,52 +159,192 @@ a{
 }
 .content{
     width: 1030px;
-    height: 338px;
+    height: auto;
     margin: 0 auto;
+    overflow: hidden;
 }
-.content .con_neirong{
+.content .con_left{
+    width: 23.5%;
+    height: 308px;
+    float: left;
+}
+.content .con_left .conl_top{
     width: 100%;
-    height: 215px;
-    border: 1px solid #E0DDE0;
-    border-radius: 6px;
-    border-top: 0;
-    padding: 15px;
+    height: 97px;
+    margin-bottom: 20px;
+    background-color: #DF2640;
+}
+.content .con_left .conl_top .conlt_title,.content .con_left .conl_bottom .conlb_title{
+    width: 100%;
+    height: 42px;
+    border-bottom: 1px solid #ffffff;
+    font-size: 18px;
+    color: #ffffff;
+    font-family: "微软雅黑";
+    line-height: 43px;
+    text-align: center;
+}
+.content .con_left .conl_top a{
+    display: block;
+    width: 100%;
+    height: 54px;
+    font-size: 12px;
+    color: #ffffff;
+    line-height: 54px;
+    margin-left: 20px;
+    font-family: "微软雅黑";
+}
+.content .con_left .conl_bottom{
+    width: 100%;
+    height: 191px;
+    background-color: #DF2640;
+}
+.content .con_left .conl_bottom .conlb_content{
+    width: 100%;
+    height: 148px;
+    padding: 10px 15px;
     box-sizing: border-box;
 }
-.content .con_neirong .con_pic{
-    width: 400px;
-    height: 300px;
-    margin: 8px 15px 15px 0;
-    background-image: url("../img/guanyulogo.300");
-    background-size: 400px 300px;
-    background-repeat: no-repeat;
-    float: left;
+.content .con_left .conl_bottom .conlb_content .conlbc_son{
+    width: 212px;
+    height: 32px;
+    line-height: 32px;
+    color: #ffffff;
+    font-size: 12px;
+    font-family: "微软雅黑";
 }
-.content .con_neirong p{
-    width: auto;
+.content .con_right{
+    width: 75%;
+    height: auto;
+    float: right;
+    padding: 15px;
+    border: 1px solid #ccc;
+    box-sizing: border-box;
+    margin-bottom: 15px;
+}
+.content .con_right h3{
+    width: 100%;
     height: 25px;
+    font-size: 18px;
+    color: #df263f;
+    text-align: center;
+    line-height: 25px;
+    font-family:"微软雅黑";
+    font-weight: normal;
+}
+.content .con_right .conr_ertitle{
+    width: 100%;
+    height: 20px;
+    margin: 10px 0;
     font-size: 12px;
     color: #333;
-    float: left;
+    text-align: center;
     font-family: "微软雅黑";
-    margin-top: 5px;
-    margin-left: 40px;
 }
-.content .con_neirong .wenben{
-    text-indent: 2em;
-    display: block;
-    float: right;
-    width: 578px;
+.content .con_right .conr_ertitle span{
+    margin-left: 10px;
+}
+.content .con_right .conr_tu{
+    width: 740.5px;
     height: auto;
-    line-height: 28px;
-    font-size: 13px;
+    margin-bottom: 10px;
+}
+.content .con_right .conr_tu img{
+    width: 100%;
+    height: auto;
+}
+.content .con_pager{
+    width: 75%;
+    height: 45px;
+    margin-top: 15px;
+    float: right;
+}
+.content .con_pager .conp_left{
+    width: 50%;
+    height: 100%;
+    float: left;
+}
+.content .con_pager .conp_left span{
+    display: block;
+    float: left;
+    width: 70px;
+    height:17px;
+    padding-top: 10px;
+    font-size: 12px;
+    text-align: right;
     color: #666;
+}
+.content .con_pager .conp_left a{
+    display: block;
+    float: left;
+    width: 108px;
+    height: 30px;
+    padding: 0 12px;
+    background-color: #E02D45;
+    font-size: 12px;
+    line-height: 30px;
+    text-align: center;
+    color: #ffffff;
     font-family: "微软雅黑";
 }
-
-.content .xiabai{
+.content .guanjian{
+    width: 75%;
+    height: 17px;
+    float: right;
+    box-sizing: border-box;
+    padding: 0 20px;
+    font-size: 12px;
+    font-weight: bold;
+    font-family: "微软雅黑";
+}
+.content .guanjian a{
+    font-size: 12px;
+    color: #E02D45;
+    font-weight: normal;
+}
+.artlelist{
+    width: 1030px;
+    height: 120px;
+    margin: 15px auto;
+}
+.artlelist .art_title{
     width: 100%;
-    height: 123px;
+    height: 27px;
+    line-height: 27px;
+    padding: 10px 0;
+    border-bottom: 1px solid #CCCCCC;
+    color: #E02D45;
+    font-size: 24px;
+    font-weight: normal;
+    font-family: "微软雅黑";
+}
+.artlelist .art_title a{
+    /*text-align: right;*/
+    float: right;
+    line-height: 35px;
+    font-size: 12px;
+    font-family: "微软雅黑";
+    color: #333;
+}
+.artlelist .art_son{
+    width: 49.3%;
+    height: 34px;
+    padding-left: 10px;
+    box-sizing: border-box;
+    border-bottom: 1px dashed #ccc;
+    float: left;
+}
+.artlelist .art_son2{
+    float: right;
+}
+.artlelist .art_son a{
+    display: block;
+    width: 100%;
+    height:34px;
+    font-size: 12px;
+    color: #333;
+    line-height: 34px;
+    font-family: "微软雅黑";
 }
 .footers{
     width: 100%;
